--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -868,7 +868,8 @@
 		"shareViaLinkedIn": "On LinkedIn:",
 		"shareWithoutLinkedInId": "Info: The institution that awarded you the badge has not provided us with a LinkedIn ID. Therefore, the corresponding logo image cannot be displayed on LinkedIn.",
 		"courseDate": "Course date",
-		"courseDateShort": "Course date"
+		"courseDateShort": "Course date",
+		"venue": "Venue"
 	},
 	"EditBadge": {
 		"editBadge": "Edit badge",
@@ -920,7 +921,8 @@
 		"confirmRemove": "Confirm Remove",
 		"sureToRemove": "Are you sure you want to remove {{badgeName}} from your badges?",
 		"downloadMicroDegree": "Download Micro Degree",
-		"pdfDownload": "Download PDF-Certificate"
+		"pdfDownload": "Download PDF-Certificate",
+		"place": "Place"
 	},
 	"BadgeCollection": {
 		"addCollection": "Add collection",
