feat: adjustments for badge expiration

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -887,6 +887,7 @@
 		"issuedBy": "Vergeben von",
 		"issuedOn": "Vergeben am",
 		"awardedTo": "Vergeben an",
+		"validUntil": "Gültig bis",
 		"more": "Mehr",
 		"criteria": "Kriterien",
 		"viewCriteriaUrl": "Besuche externe Kriterien-URL",
