--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -887,6 +887,7 @@
 		"delete": "Delete",
 		"issuedBy": "Issued by",
 		"issuedOn": "Issued on",
+		"validUntil": "Valid until",
 		"awardedTo": "Awarded to",
 		"more": "More",
 		"criteria": "Criteria",
