--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -523,13 +523,14 @@
 		},
 		"copyBadgeHeadline": "Select copy status",
 		"copyBadgeDescription1": "Within your own institution, badges can always be copied. ",
-		"copyBadgeDescription2": "You can update the copy status for <strong>other</strong> institutions at any time later via the menu on the badge detail page.",
+		"copyBadgeDescription2": "You can update the copy status for <strong>other</strong> institutions at any time later via the menu item 'Edit' on the badge detail page.",
 		"copyLabelOthers": "The badge may be copied by <strong>other</strong> institutions.",
 		"copy": "Copy badge for own institution",
 		"copyBadge": "Copy badge",
 		"copyableFor": "Copyable for",
 		"copyThisIssuer": "Copy (this institution)",
 		"editCopyStatus": "Edit copy status",
+		"editAfterIssuedInfo": "Since the badge has already been awarded, only the following data can be edited: ",
 		"award": "Award Badge",
 		"awardQRCode": "Award Badge using QR Code",
 		"partOfLearningPath": "This Badge is part of the following learning paths:",
