--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -80,7 +80,7 @@
 		"reset": "Zurücksetzen",
 		"exam": "Test / Prüfung",
 		"create": "erstellen",
-		"copy": "kopieren",
+		"copy": "Kopieren",
 		"place": "stellen",
 		"forwarded": "weitergeleitet",
 		"revoke": "zurücknehmen",
@@ -522,7 +522,7 @@
 		},
 		"copyBadgeHeadline": "Kopier-Status",
 		"copyBadgeDescription1": "Innerhalb der eigenen Institution können Badges immer kopiert werden. ",
-		"copyBadgeDescription2": "Den Kopier-Status für <strong>andere</strong> Institutionen kannst du später jederzeit über das Menü auf der Badge-Detail-Seite aktualisieren.",
+		"copyBadgeDescription2": "Den Kopier-Status für <strong>andere</strong> Institutionen kannst du jederzeit über den Menüpunkt “Bearbeiten” auf der Badge-Detail-Seite aktualisieren.",
 		"copyLabelOthers": "Der Badge darf von <strong>anderen</strong> Institutionen kopiert werden.",
 		"copy": "Badge für eigene Institution kopieren",
 		"copyBadge": "Badge kopieren",
@@ -531,6 +531,7 @@
 		"copyPermissionInfo": "Der Kopier-Status dieses Badges erlaubt nur das Kopieren innerhalb der Institution, daher wird nur diese hier angezeigt.",
 		"copyThisIssuer": "Kopieren (diese Institution)",
 		"editCopyStatus": "Kopierstatus bearbeiten",
+		"editAfterIssuedInfo": "Da der Badge bereits vergeben wurde, können lediglich folgende Daten bearbeitet werden: ",
 		"award": "Badge direkt vergeben",
 		"awardQRCode": "Badge über QR-Code vergeben",
 		"partOfLearningPath": "Dieser Badge ist Teil folgender Lernpfade:",
