Feat/adjust badge expiration (#1780)
* feat: rm sentence

* feat: adjustments for badge expiration

* feat: rename component

* refactor: validator

* feat: route to edit component conditionally

* feat: styling

* feat: extract expiration utils

* feat: add types and helpers for ob3 assertion

* fix: comment out for now

* fix: more types

* fix: simplify checks, add fields to config

* fix: horizontal alignment of inputs

---------

Co-authored-by: David Scheidt <david.scheidt@opensenselab.org>
Co-authored-by: David Scheidt <scheidtdav@users.noreply.github.com>

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -80,7 +80,7 @@
 		"reset": "Zurücksetzen",
 		"exam": "Test / Prüfung",
 		"create": "erstellen",
-		"copy": "kopieren",
+		"copy": "Kopieren",
 		"place": "stellen",
 		"forwarded": "weitergeleitet",
 		"revoke": "zurücknehmen",
@@ -522,7 +522,7 @@
 		},
 		"copyBadgeHeadline": "Kopier-Status",
 		"copyBadgeDescription1": "Innerhalb der eigenen Institution können Badges immer kopiert werden. ",
-		"copyBadgeDescription2": "Den Kopier-Status für <strong>andere</strong> Institutionen kannst du später jederzeit über das Menü auf der Badge-Detail-Seite aktualisieren.",
+		"copyBadgeDescription2": "Den Kopier-Status für <strong>andere</strong> Institutionen kannst du jederzeit über den Menüpunkt “Bearbeiten” auf der Badge-Detail-Seite aktualisieren.",
 		"copyLabelOthers": "Der Badge darf von <strong>anderen</strong> Institutionen kopiert werden.",
 		"copy": "Badge für eigene Institution kopieren",
 		"copyBadge": "Badge kopieren",
@@ -531,6 +531,7 @@
 		"copyPermissionInfo": "Der Kopier-Status dieses Badges erlaubt nur das Kopieren innerhalb der Institution, daher wird nur diese hier angezeigt.",
 		"copyThisIssuer": "Kopieren (diese Institution)",
 		"editCopyStatus": "Kopierstatus bearbeiten",
+		"editAfterIssuedInfo": "Da der Badge bereits vergeben wurde, können lediglich folgende Daten bearbeitet werden: ",
 		"award": "Badge direkt vergeben",
 		"awardQRCode": "Badge über QR-Code vergeben",
 		"partOfLearningPath": "Dieser Badge ist Teil folgender Lernpfade:",
@@ -623,7 +624,7 @@
 		"alignEducationalFramework": "Verknüpfung zu Bildungs-Standards",
 		"frame": "Rahmen",
 		"expiration": "Gültigkeit",
-		"expirationInfo": "Diese Information kann auch bei der Vergabe geändert werden. Badges werden nach Ablauf der Gültigkeit als abgelaufen markiert.",
+		"expirationInfo": "Badges werden nach Ablauf der Gültigkeit als abgelaufen markiert.",
 		"validUntil": "Der Badge ist gültig bis ",
 		"chooseDuration": "Wähle Dauer",
 		"durationPositive": "Bitte gib eine positive Zahl oder 0 ein",
@@ -890,6 +891,7 @@
 		"issuedBy": "Vergeben von",
 		"issuedOn": "Vergeben am",
 		"awardedTo": "Vergeben an",
+		"validUntil": "Gültig bis",
 		"more": "Mehr",
 		"criteria": "Kriterien",
 		"viewCriteriaUrl": "Besuche externe Kriterien-URL",
