--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -523,13 +523,14 @@
 		},
 		"copyBadgeHeadline": "Select copy status",
 		"copyBadgeDescription1": "Within your own institution, badges can always be copied. ",
-		"copyBadgeDescription2": "You can update the copy status for <strong>other</strong> institutions at any time later via the menu on the badge detail page.",
+		"copyBadgeDescription2": "You can update the copy status for <strong>other</strong> institutions at any time later via the menu item 'Edit' on the badge detail page.",
 		"copyLabelOthers": "The badge may be copied by <strong>other</strong> institutions.",
 		"copy": "Copy badge for own institution",
 		"copyBadge": "Copy badge",
 		"copyableFor": "Copyable for",
 		"copyThisIssuer": "Copy (this institution)",
 		"editCopyStatus": "Edit copy status",
+		"editAfterIssuedInfo": "Since the badge has already been awarded, only the following data can be edited: ",
 		"award": "Award Badge",
 		"awardQRCode": "Award Badge using QR Code",
 		"partOfLearningPath": "This Badge is part of the following learning paths:",
@@ -624,7 +625,7 @@
 		"alignEducationalFramework": "Link to educational standards",
 		"frame": "Frame",
 		"expiration": "Validity",
-		"expirationInfo": "Describe how long this badge is generally valid. This information can also be changed when awarding the badge. Badges are marked as expired after their validity period has expired.",
+		"expirationInfo": "Describe how long this badge is generally valid. Badges are marked as expired after their validity period has expired.",
 		"validUntil": "The badge is valid until ",
 		"chooseDuration": "Choose duration",
 		"durationPositive": "Please enter a positive number or 0",
@@ -890,6 +891,7 @@
 		"delete": "Delete",
 		"issuedBy": "Issued by",
 		"issuedOn": "Issued on",
+		"validUntil": "Valid until",
 		"awardedTo": "Awarded to",
 		"more": "More",
 		"criteria": "Criteria",
