fix: translations, hide input arrows

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1035,7 +1035,8 @@
 		"pleaseRenewPasswordInfo": "Dauert nur kurz und sorgt für mehr Schutz.",
 		"dontPanic": "Keine Panik – alles ist in Ordnung!",
 		"repeatNewpassword": "Passwort wiederholen",
-		"loggingIn": "Einloggen ..."
+		"loggingIn": "Einloggen ...",
+		"editProfile": "Profile editieren"
 	},
 	"Welcome": {
 		"heading": "Schön, dass du da bist!",
