--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -449,7 +449,8 @@
 		"role": {
 			"owner": "Eigentümer:in",
 			"editor": "Editor:in",
-			"staff": "Mitarbeiter:in"
+			"staff": "Mitarbeiter:in",
+			"creator": "Ersteller:in / Eigentümer:in"
 		},
 		"confirmNetworkInvitation": "Bestätige die <span class='tw-font-bold'>Netzwerk-Einladung von {{networkName}}</span> für deine Institution <span class='tw-italic'>{{issuerName}}</span> mit Klick auf den Button:",
 		"partnerSince": "Netzwerk-Partner:in seit",
@@ -468,7 +469,8 @@
 		"sharedOn": "Freigegeben am",
 		"website": "Netzwerk-Webseite",
 		"createLpInfo": "Um einen <span class='tw-font-bold'>Netzwerk-Lernpfad</span> anlegen zu können, müssen mindestens zwei Badges im Netzwerk erstellt oder von Partner-Institutionen für das Netzwerk freigegeben werden.",
-		"pendingInvites": "Unbestätigte Einladungen"
+		"pendingInvites": "Unbestätigte Einladungen",
+		"edit": "Netzwerk bearbeiten"
 	},
 	"Badge": {
 		"groupBy": "Gruppieren nach",
