feat: add course url to create and edit forms for badges

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -681,7 +681,9 @@
 		"activityStartDateRequired": "Start date is required",
 		"selectIssuer": "For which of your institutions should the badge be created or edited?",
 		"noIssuersAvailable": "You are not part of an institution and therefore cannot create or edit badges.",
-		"selectBadge": "Select the badge you want to edit or create a new one"
+		"selectBadge": "Select the badge you want to edit or create a new one",
+		"linkToCourse": "Link to Course Offering",
+		"websiteUrl": "Website URL"
 	},
 	"Signup": {
 		"youHaveAccount": "Already have an account?",
