--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -680,7 +680,9 @@
 		"activityStartDateRequired": "Startdatum ist erforderlich",
 		"selectIssuer": "Für welche deiner Institutionen soll der Badge erstellt bzw. editiert werden?",
 		"noIssuersAvailable": "Du bist nicht Teil einer Institution und kannst daher keine Badges erstellen oder editieren.",
-		"selectBadge": "Wähle den zu bearbeitenden Badge oder erstelle einen Neuen"
+		"selectBadge": "Wähle den zu bearbeitenden Badge oder erstelle einen Neuen",
+		"linkToCourse": "Link zur Lehrveranstaltung",
+		"websiteUrl": "Webseiten-URL"
 	},
 	"Signup": {
 		"youHaveAccount": "Du hast bereits einen Account?",
