--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -406,8 +406,10 @@
 		"addOptionalDetails": "Optionale Details hinzufügen",
 		"evidence": "Nachweis für erfolgreiche Teilnahme",
 		"addNewEvidence": "Weiteren Nachweis hinzufügen",
-		"evidenceUrl": "URL zum Nachweis",
-		"evidenceNarrative": "Textliches Narrativ",
+		"evidenceUrl": "Nachweis-URL (Link zu z.B. Materialien oder Fotos, die den Lernerfolg belegen)",
+		"evidenceNarrative": "Textliches Narrativ (Erzählung/Hintergrund-Infos zur Badge-Vergabe; max. 600 Zeichen)",
+		"narrative": "Nachweis / Narrativ",
+		"addEvidenceUrl": "Weitere URL hinzufügen",
 		"youthWelfare": "Freier Träger der Jugendhilfe"
 	},
 	"Network": {
@@ -909,7 +911,7 @@
 		"viewAlignmentUrl": "Besuche Verknüpfungs-URL",
 		"narrative": "Narrativ",
 		"evidence": "Nachweis",
-		"viewEvidenceUrl": "Besuche Nachweis-URL",
+		"viewEvidenceUrl": "Nachweis-URL",
 		"downloadImage": "Download Badge-Bild",
 		"downloadImage20": "Download Badge-Bild (2.0)",
 		"downloadImage30": "Download Badge-Bild (3.0)",
