feat: reorder badge detail to show course url and more

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -929,7 +929,8 @@
 		"sureToRemove": "Bist du sicher, dass du {{badgeName}} aus deinen Badges entfernen möchtest?",
 		"pdfDownload": "PDF-Zertifikat herunterladen",
 		"downloadMicroDegree": "Micro Degree herunterladen",
-		"place": "Ort"
+		"place": "Ort",
+		"expiryAfter": "Gültigkeit ab Vergabe"
 	},
 	"BadgeCollection": {
 		"addCollection": "Sammlung hinzufügen",
