--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -682,7 +682,10 @@
 		"activityStartDateRequired": "Startdatum ist erforderlich",
 		"selectIssuer": "Für welche deiner Institutionen soll der Badge erstellt bzw. editiert werden?",
 		"noIssuersAvailable": "Du bist nicht Teil einer Institution und kannst daher keine Badges erstellen oder editieren.",
-		"selectBadge": "Wähle den zu bearbeitenden Badge oder erstelle einen Neuen"
+		"selectBadge": "Wähle den zu bearbeitenden Badge oder erstelle einen Neuen",
+		"linkToCourse": "Link zur Lernveranstaltung",
+		"course": "Lernveranstaltung",
+		"websiteUrl": "Webseiten-URL"
 	},
 	"Signup": {
 		"youHaveAccount": "Du hast bereits einen Account?",
@@ -928,7 +931,8 @@
 		"sureToRemove": "Bist du sicher, dass du {{badgeName}} aus deinen Badges entfernen möchtest?",
 		"pdfDownload": "PDF-Zertifikat herunterladen",
 		"downloadMicroDegree": "Micro Degree herunterladen",
-		"place": "Ort"
+		"place": "Ort",
+		"expiryAfter": "Gültigkeit ab Vergabe"
 	},
 	"BadgeCollection": {
 		"addCollection": "Sammlung hinzufügen",
